# CRISP

./: .gitignore  pyproject.toml
configs/: dsi_h100.yaml  dsi_h200.yaml  dsi_h200_base.yaml  dsi_h200_base_nobox.yaml  example.yaml  h200_smoke.yaml  production.yaml  smoke_test.yaml
crisp/: __init__.py  config.py  config_loader.py  train.py  types.py
crisp/discussion/: post_discussion.py  representative.py  trigger.py
crisp/evaluation/: aime.py  bayes_at_n.py  benchmarks.py  dapo.py
crisp/infra/: __init__.py  actor_model.py  deepspeed_strategy.py  distributed.py  experience.py  hf_generate.py  lora_utils.py  ray_launcher.py  strategy.py  utils.py  vllm_engine.py  vllm_worker_wrap.py  weight_sync.py
crisp/rewards/: advantages.py  coach_rewards.py  ema_tracker.py  player_rewards.py  repetition_buffer.py
docs/: SystemWalkthrough.txt  dsi_training_report.md
paper/: colm2025_conference.bib  colm2025_conference.sty  generate_pipeline.py  main.aux  main.bbl  main.blg  main.out  main.tex
scripts/: check_base_vs_saved.py  check_config.py  check_index.py  check_manual_save.py  check_output.py  check_output_fixed.py  check_safetensors_swap.py  check_tokenizer.py  check_weights.py  check_weights_full.py  dsi_eval.sh  dsi_train.sh  dsi_train_base.sh  dsi_train_h100.sh  eval_model.py  extract_hf_from_ds.py  modal_production.py  modal_smoke.py  modal_two_player_smoke.py  smoke_test.py  write_smoke_report.py
tests/: conftest.py  test_batch_builder.py  test_config.py  test_config_loader.py  test_reward_flow.py  test_smoke_report.py  test_train.py
(+67 files in other folders)
